tests/ui/never_type/suggestion-ice-132517.rs
fn main() {
    x::<_>(|_| panic!())
    //~^ ERROR cannot find function `x` in this scope
}
